tests/dataset/tpc-ds/compiler/rust/q63.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/q63.rs:38:23
   |
38 |     assert!(result == 63 as f64);
   |             ------    ^^^^^^^^^ expected `i32`, found `f64`
   |             |
   |             expected because this is `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
